--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.1",
+    "gsap": "^3.6.1",
     "next": "^10.1.3",
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-gsap": "^3.2.1",
     "tailwindcss": "^2.1.1"
   },
   "devDependencies": {
